# spacy_matching

./: .gitignore  README.md  changelog  main.py  main_old.py  notebook.ipynb  pyproject.toml  requirements.txt  utils.py  utils_old.py
archive/: utils_old.py
data/: Test_Daten.csv
docs/: readme-pypi.md
src/: analysis_threshold.ipynb  main.py  notebook.ipynb  utils.py
src/spacy-matching/: notebook.ipynb
src/spacy_matching/: analysis_threshold.ipynb  main.py  utils.py
