[project]
name = "spacy-matching"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kaleido==0.2.0",
    "levenshtein>=0.27.1",
    "pandas-plots>=0.12.23",
    "pandas>=2.2.3",
    "pip>=25.0.1",
    "spacy>=3.8.5",
    "spaczz>=0.6.1",
]
